fix(account-modal): css fix for modal appearing off screen in certain cases

--- a/app/styles/toolbar.css
+++ b/app/styles/toolbar.css
@@ -898,7 +898,24 @@ input.userEditable:focus {
 	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
 }
 
+.account__modal {
+	z-index: 20;
+	background-color: #f1f1f1;
+	box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.50);
+	padding: 10px;
+	width: 40%;
+	border-radius: 5px;
+	position: absolute;
+	top: 48px;
+	left: 30%;
+}
 
+@media screen and (min-width:320px) and (max-width: 768px) {
+	.account__modal {
+		width: 80%;
+		left: 10%;
+	}
+}
 
 .account__modal .button {
 	background-color: #595A5A;
@@ -917,22 +934,6 @@ input.userEditable:focus {
 
 }
 
-.account__modal--wrapper {
-	position: relative;
-	top: 50px;
-}
-
-.account__modal {
-	z-index: 20;
-	background-color: #f1f1f1;
-	box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.50);
-	padding: 10px;
-	border-radius: 5px;
-	width: 50%;
-	position: absolute;
-	top: 0;
-	left: 25%;
-}
 
 
 /* Undoing a bad decision: */
